// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageNotFound displays PageNotFound when the user is authenticated 1`] = `
<div>
  <h1>
    Page not found!
  </h1>
  <h2>
    Sorry but the page you are looking for was not found.
  </h2>
  <a
    data-discover="true"
    href="/lists"
  >
    Return to the home page
  </a>
</div>
`;

exports[`PageNotFound displays UnknownError when an error occurs validating authentication 1`] = `
<div>
  <h1>
    Something went wrong!
  </h1>
  <h2>
    We are currently unable to render this page.
  </h2>
  <p>
    Please check your connection and try to  
    <button
      style="background-color: transparent; cursor: pointer; display: inline; margin: 0px; padding: 0px; color: rgb(0, 123, 255); text-decoration: none;"
    >
      refresh the page
    </button>
  </p>
</div>
`;

exports[`PageNotFound renders the Loading component when fetch request is pending 1`] = `
<div>
  <div
    id="loader"
  >
    <div
      class="spinner-border"
      id="spinner"
      role="status"
    >
      <span
        class="visually-hidden"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;
